Opened 19 years ago

Closed 19 years ago

Last modified 19 years ago

#279 closed bug (fixed)

[FileTypes] and TreeView

Reported by: diver Owned by: axeld
Priority: normal Milestone: R1
Component: - General Version:
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

On newly created image you could see several items selected at once in treeview. Steps to reproduce: Boot Haiku and start tracker start FileTypes and move it's window half offscreen in the right corner. Expand application and select Be Application Now start StyledEdit and you see several items selected. Also notice *which* items are selected, i suspect there is more thing like this with another apps/prefs started first time. Tested under vmware with rev16696. Screenshot will follow.

Attachments (1)

TreeView.PNG (31.6 KB ) - added by diver 19 years ago.
treeview

Download all attachments as: .zip

Change History (9)

comment:1 by diver, 19 years ago

Cc: axeld@… added

comment:2 by diver, 19 years ago

Also note that if you click anywhere outside of FileTypes treeview will update it's content and if you activate FileTypes it will update treeview again. Is this a normal behaviour?

comment:3 by axeld, 19 years ago

Owner: changed from bpmagic@… to axeld

comment:4 by diver, 19 years ago

Another thing: Deleting FyleType will only work if you delete it twice.

by diver, 19 years ago

Attachment: TreeView.PNG added

treeview

comment:5 by axeld, 19 years ago

The "delete twice" symptom is gone with hrev16988.

comment:6 by axeld, 19 years ago

Resolution: fixed

comment:7 by axeld, 19 years ago

Fixed in hrev16993. The update of the tree is probably a bug in the app_server, though (and has not been fixed yet).

comment:8 by axeld, 19 years ago

Status: newclosed
Note: See TracTickets for help on using tickets.