It no longer appears as if you need to delete file types twice until they disappear. This fixes a part of bug #279.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@16988 a95241bf-73f2-0310-859d-f6bbb57e9c96